Fix nav link spacing

--- a/src/components/Common/FlatButton.module.css
+++ b/src/components/Common/FlatButton.module.css
@@ -2,8 +2,7 @@
     color: #DCE3E7;
     text-decoration: none;
     font-size: 14px;
-    margin: 6px 8px;
-    min-width: 88px;
+    margin: 6px 12px;
     text-transform: uppercase;
     text-align: center;
 }
